@@ -63,6 +63,7 @@ Roy Bixler
 Martin Bless
 Pablo Bleyer
 Erik van Blokland
+Eric Blossom
 Finn Bock
 Paul Boddie
 Matthew Boedicker
